--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -8,6 +8,12 @@
     width: 153px;
     height: 153px;
     border-radius: 50%;
+
+    transition: box-shadow $animation-duration;
+
+    &:hover {
+      box-shadow: 0 13px 27px rgba(0, 83, 181, 0.46);
+    }
   }
   
   &__name {
